added a class SelectRewardTest and changed SelectReward